@@ -6,6 +6,7 @@
 - Fixed errors in the --debug option.
 - Upgraded LZMA decoder to version 22.01
 - The directory generation for file extraction has been changed to use unique directory names created with high-resolution timestamps. Additionally, a retry limit for directory creation has been introduced, reducing the risk of infinite loops due to name collisions.
+- Implemented variable-length buffer handling for path strings in stub, eliminating the risk of buffer overruns dependent on MAX_PATH.
 
 === 1.3.15
 - Support for Ruby 2.6 and above.
